# zero2prod

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: general.yml
src/: main.rs
tests/: health_check.rs
